@@ -1356,6 +1356,10 @@ buildroot-0.1.3 2009-02-28 &lt;spudmonkey@racsa.co.cr&gt;
 <pre><ul>
 nuttx-0.4.5 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
+	* Add an enumeration argument to the SPI chip select and status methods so
+	  that the interface can handle more than one device.
+	* eZ80Acclaim!: Add a generic SPI driver for all eZ80 boards.
+
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 buildroot-0.1.4 2009-xx-xx &lt;spudmonkey@racsa.co.cr&gt;
