@@ -52,7 +52,7 @@ endif
 CHIP_SSRCS	= 
 CHIP_CSRCS	= ez80_clock.c ez80_initialstate.c ez80_irq.c ez80_copystate.c \
 		  ez80_schedulesigaction.c ez80_sigdeliver.c ez80_timerisr.c \
-		  ez80_lowuart.c ez80_serial.c ez80_registerdump.c
+		  ez80_lowuart.c ez80_serial.c ez80_spi.c ez80_registerdump.c
 ifeq ($(CONFIG_ARCH_CHIP_EZ80F91),y)
 ifeq ($(CONFIG_EZ80_EMAC),y)
 CHIP_CSRCS	+= ez80_emac.c
